# inq

./: .gitignore  Cargo.toml  README.md  inq.kdl  rustfmt.toml
.github/workflows/: check.yml  release.yml  test.yml
src/: cli.rs  config.rs  decode.rs  main.rs  parse.rs  print.rs  script.rs  state.rs  util.rs
src/cli/: mod.rs  query.rs  variable.rs
