[package]
name = "inq"
version = "0.1.0"
edition = "2024"
msrv = "1.95"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
kdl = "6.5.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
miette = { version="7.6.0", features=["fancy"] }
serde_json = "1.0.149"
anstream = "1.0.0"
owo-colors = "4.3.0"
