[package]
name = "inq"
description = "A tool for executing API queries defined in a plaintext file that can be checked in to version control or managed like any other file."
license = "Apache-2.0"
repository = "https://github.com/funnyboy_roks/inq"
version = "0.0.1"
edition = "2024"
msrv = "1.95"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
kdl = "6.5.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
miette = { version = "7.6.0", features = ["fancy"] }
serde_json = "1.0.149"
anstream = "1.0.0"
owo-colors = "4.3.0"
humantime = "2.3.0"
