[package]
name = "inq"
description = "A tool for executing API queries defined in a plaintext file that can be checked in to version control or managed like any other file."
license = "Apache-2.0"
repository = "https://github.com/funnyboy_roks/inq"
version = "0.0.1"
edition = "2024"
rust-version = "1.95"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
kdl = "6.5.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
miette = { version = "7.6.0", features = ["fancy"] }
serde_json = "1.0.149"
anstream = "1.0.0"
owo-colors = "4.3.0"
humantime = "2.3.0"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
rhai = { version = "1.24.0", features = ["serde"] }
chrono-humanize = "0.2.3"
cookie = "0.18.1"
fuzzt = { version = "0.3.1", default-features = false, features = ["levenshtein"] }
rhai-rand = "0.1.6"
rhai-fs = "0.1.4"
bytes = "1.11.1"
async-compression = { version = "0.4.42", features = ["tokio", "gzip", "deflate", "brotli", "zstd"] }
futures-util = "0.3.32"
tokio = "1.52.3"
